Add: popup when client hasn't allowed video/mic permissions

--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -622,7 +622,14 @@
       "you_felt": "Сіз сездіңіз",
       "comment_text": "және Сіз түсініктеме бердіңіз:",
       "no_result": "Ештеңе табылмады",
-      "critical_text": "Өмірлік оқиғаға немесе маңызды жағдайға байланысты"
+      "critical_text": "Өмірлік оқиғаға немесе маңызды жағдайға байланысты",
+      "recommendations": "Көңіл-күйіңізге сәйкес ұсыныстар",
+      "articles": "Мақалалар",
+      "videos": "Бейнежазбалар",
+      "podcasts": "Подкасттар",
+      "read_more_button": "Толығырақ оқу",
+      "by": "{{creator}} авторынан",
+      "min_read": "мин оқу"
     },
     "mascot-header-MyQA": {
       "heading": "Менің Q&A (Сұрақ/Жауап)",
