--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -623,7 +623,14 @@
       "last_thirty_days_text": "За последние 30 дней Вы сообщили, что чувствовали:",
       "time": "раз",
       "times": "раз/раза",
-      "critical_text": "Связано с жизненным событием или критической ситуацией"
+      "critical_text": "Связано с жизненным событием или критической ситуацией",
+      "recommendations": "Рекомендации по вашему настроению",
+      "articles": "Статьи",
+      "videos": "Видео",
+      "podcasts": "Подкасты",
+      "read_more_button": "Читать далее",
+      "by": "от {{creator}}",
+      "min_read": "мин чтения"
     },
     "mascot-header-MyQA": {
       "heading": "Мой Q&A (Вопрос/Ответ)",
