--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -105,7 +105,9 @@
     "sos-center": {
       "button_link": "Відвідай сайт",
       "button_call": "Зв'яжися з нами зараз",
-      "no_results": "Для обраної країни й мови немає результатів."
+      "no_results": "Для обраної країни й мови немає результатів.",
+      "other_emergency_services": "Інші екстрені послуги",
+      "browse": "Огляд"
     },
     "register-about-you": {
       "input_name_label": "Ім'я",
@@ -606,7 +608,14 @@
       "last_thirty_days_text": "",
       "time": "",
       "times": "",
-      "critical_text": "Related to a life event or critical situation"
+      "critical_text": "Related to a life event or critical situation",
+      "recommendations": "Рекомендації відповідно до вашого настрою",
+      "articles": "Статті",
+      "videos": "Відео",
+      "podcasts": "Подкасти",
+      "read_more_button": "Читати більше",
+      "by": "від {{creator}}",
+      "min_read": "хв читання"
     },
     "mascot-header-MyQA": {
       "heading": "Мої запитання й відповіді",
@@ -850,7 +859,44 @@
       "recommended_podcasts": "Рекомендовані подкасти",
       "read_more_button": "Читати далі",
       "by": "від {{creator}}",
-      "min_read": "хв читання"
+      "min_read": "хв читання",
+      "psychological": "Психологічний",
+      "biological": "Біологічний",
+      "social": "Соціальний",
+      "inc_inc_inc": "Ми помітили деякі виклики: психологічний, біологічний та соціальний зросли.",
+      "inc_inc_same": "Ми помітили деякі виклики: психологічний та біологічний зросли, тоді як соціальний залишився без змін.",
+      "inc_inc_dec": "Чудово! Соціальний зменшився, хоча психологічний та біологічний зросли.",
+
+      "inc_same_inc": "Ми помітили деякі виклики: психологічний та соціальний зросли, тоді як біологічний залишився без змін.",
+      "inc_same_same": "Ми помітили деякі виклики: психологічний зріс, тоді як біологічний та соціальний залишилися без змін.",
+      "inc_same_dec": "Чудово! Соціальний зменшився, хоча психологічний зріс, а біологічний залишився без змін.",
+
+      "inc_dec_inc": "Чудово! Біологічний зменшився, хоча психологічний та соціальний зросли.",
+      "inc_dec_same": "Чудово! Біологічний зменшився, хоча психологічний зріс, а соціальний залишився без змін.",
+      "inc_dec_dec": "Великий прогрес! Біологічний та соціальний зменшилися, хоча психологічний зріс.",
+
+      "same_inc_inc": "Ми помітили деякі виклики: біологічний та соціальний зросли, тоді як психологічний залишився без змін.",
+      "same_inc_same": "Ми помітили деякі виклики: біологічний зріс, тоді як психологічний та соціальний залишилися без змін.",
+      "same_inc_dec": "Чудово! Соціальний зменшився, хоча біологічний зріс, а психологічний залишився без змін.",
+
+      "same_same_inc": "Ми помітили деякі виклики: соціальний зріс, тоді як психологічний та біологічний залишилися без змін.",
+      "same_same_dec": "Чудово! Соціальний зменшився, тоді як психологічний та біологічний залишилися без змін.",
+
+      "same_dec_inc": "Чудово! Біологічний зменшився, хоча соціальний зріс, а психологічний залишився без змін.",
+      "same_dec_same": "Чудово! Біологічний зменшився, тоді як психологічний та соціальний залишилися без змін.",
+      "same_dec_dec": "Великий прогрес! Біологічний та соціальний зменшилися, тоді як психологічний залишився без змін.",
+
+      "dec_inc_inc": "Чудово! Психологічний зменшився, хоча біологічний та соціальний зросли.",
+      "dec_inc_same": "Чудово! Психологічний зменшився, хоча біологічний зріс, а соціальний залишився без змін.",
+      "dec_inc_dec": "Великий прогрес! Психологічний та соціальний зменшилися, хоча біологічний зріс.",
+
+      "dec_same_inc": "Чудово! Психологічний зменшився, хоча соціальний зріс, а біологічний залишився без змін.",
+      "dec_same_same": "Чудово! Психологічний зменшився, тоді як біологічний та соціальний залишилися без змін.",
+      "dec_same_dec": "Великий прогрес! Психологічний та соціальний зменшилися, тоді як біологічний залишився без змін.",
+
+      "dec_dec_inc": "Великий прогрес! Психологічний та біологічний зменшилися, хоча соціальний зріс.",
+      "dec_dec_same": "Великий прогрес! Психологічний та біологічний зменшилися, тоді як соціальний залишився без змін.",
+      "dec_dec_dec": "Відмінний прогрес! Психологічний, біологічний та соціальний усі зменшилися."
     }
   },
   "pages": {
