--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -609,7 +609,14 @@
       "you_felt": "Դուք զգացել եք",
       "comment_text": "և մեկնաբանել եք․:",
       "no_result": "Արդյունքներ չեն գտնվել",
-      "critical_text": "Կապված է կյանքի իրադարձության կամ կրիտիկական իրավիճակի հետ"
+      "critical_text": "Կապված է կյանքի իրադարձության կամ կրիտիկական իրավիճակի հետ",
+      "recommendations": "Առաջարկություններ ըստ ձեր տրամադրության",
+      "articles": "Հոդվածներ",
+      "videos": "Տեսանյութեր",
+      "podcasts": "Փոդքաստներ",
+      "read_more_button": "Կարդալ ավելին",
+      "by": "հեղինակ՝ {{creator}}",
+      "min_read": "րոպե ընթերցանություն"
     },
     "mascot-header-MyQA": {
       "heading": "Իմ հարցուպատասխանը",
