--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -458,7 +458,10 @@
       "additional_comment_placeholder": "Ի՞նչն ստիպեց այդպես զգալ։",
       "submit_mood_track": "Ուղարկել",
       "add_mood_tracker_success": "Ձեր օրվա տրամադրությունը բարեհաջող ավելացվել է։",
-      "emergency_label": "Սա վերաբերում է կյանքի իրադարձության կամ կրիտիկական իրավիճակի՞։"
+      "emergency_label": "Սա վերաբերում է կյանքի իրադարձության կամ կրիտիկական իրավիճակի՞։",
+      "recommendations": "Առաջարկություններ",
+      "recommendations_text": "Ցանկանու՞մ եք դիտել ձեր տրամադրության գրաֆիկը և տեսնել առաջարկված բովանդակությունը:",
+      "check_out": "Դիտել"
     },
     "mascot-welcome-header": {
       "welcome": "Բարի վերադարձ {{հաճախորդի անունը}}",
@@ -616,7 +619,8 @@
       "podcasts": "Փոդքաստներ",
       "read_more_button": "Կարդալ ավելին",
       "by": "հեղինակ՝ {{creator}}",
-      "min_read": "րոպե ընթերցանություն"
+      "min_read": "րոպե ընթերցանություն",
+      "no_recommendations": "Առաջարկություններ չեն գտնվել"
     },
     "mascot-header-MyQA": {
       "heading": "Իմ հարցուպատասխանը",
