Add: always show the result from the assessment

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -115,7 +115,7 @@
       "button_link": "Visit website",
       "button_call": "Contact now",
       "no_results": "There are no results for the current selected country and language.",
-      "other_emergency_services": "Other emergency services",
+      "other_emergency_services": "Other emergency service providers",
       "browse": "Browse"
     },
     "register-about-you": {
@@ -887,7 +887,11 @@
       "continue": "Continue",
       "view": "View Results",
       "view_detailed_results": "View Detailed Results",
-      "started_at": "Started on {{date}}"
+      "started_at": "Started on {{date}}",
+      "psychological": "Psychological",
+      "biological": "Biological",
+      "social": "Social",
+      "latest_results": "Latest Results"
     },
     "baseline-assesment-result": {
       "assessment_completed": "Assessment completed",
