--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -115,7 +115,7 @@
       "button_link": "Vizitați site-ul web",
       "button_call": "Contactați-ne acum",
       "no_results": "Nu există rezultate pentru țara și limba selectate",
-      "other_emergency_services": "Alte servicii de urgență",
+      "other_emergency_services": "Alți furnizori de servicii de urgență",
       "browse": "Răsfoiește"
     },
     "register-about-you": {
