--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -106,7 +106,7 @@
       "button_link": "Відвідай сайт",
       "button_call": "Зв'яжися з нами зараз",
       "no_results": "Для обраної країни й мови немає результатів.",
-      "other_emergency_services": "Інші екстрені послуги",
+      "other_emergency_services": "„Інші постачальники екстрених служб”",
       "browse": "Огляд"
     },
     "register-about-you": {
