--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -260,7 +260,8 @@
       "conducted": "Консультация аяқталды",
       "not_conducted": "Өткізілмеді",
       "free": "Тегін",
-      "coupon": "Купон"
+      "coupon": "Купон",
+      "join_button_label_tooltip": "Сіз консультацияға басталғанға дейін 5 минут бұрын қосыла аласыз"
     },
     "login": {
       "email_label": "Электронды пошта / кіру токені",
@@ -435,6 +436,7 @@
       "live_text": "Қазір",
       "accept_button_label": "Консультацияны қабылдау",
       "join_button_label": "Қосылу",
+      "join_button_label_tooltip": "Сіз консультацияға басталғанға дейін 5 минут бұрын қосыла аласыз",
       "change_button_label": "Құпия сөзді өзгерту",
       "ordinal_st": "-ші",
       "ordinal_nd": "-ші",
@@ -480,6 +482,7 @@
       "change_button_label": "Құпия сөзді өзгерту",
       "accept_button_label": "Консультацияны қабылдау",
       "join_button_label": "Қосылу",
+      "join_button_label_tooltip": "Сіз консультацияға басталғанға дейін 5 минут бұрын қосыла аласыз",
       "schedule_button_label": "Жоспарлау",
       "live_label": "Қазір",
       "no_consultations": "Қазіргі Сізде алдағы консультациялар жоқ",
