--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -250,7 +250,8 @@
       "conducted": "Konsultacja zakończona",
       "not_conducted": "Nie przeprowadzono",
       "free": "Bezpłatne",
-      "coupon": "Kupon"
+      "coupon": "Kupon",
+      "join_button_label_tooltip": "Możesz dołączyć do konsultacji 5 minut przed rozpoczęciem"
     },
     "login": {
       "email_label": "Email / token dostępu",
@@ -419,6 +420,7 @@
       "live_text": "Teraz",
       "accept_button_label": "Zaakceptuj konsulatcję",
       "join_button_label": "Dołącz",
+      "join_button_label_tooltip": "Możesz dołączyć do konsultacji 5 minut przed rozpoczęciem",
       "change_button_label": "Zmiana",
       "ordinal_st": ".",
       "ordinal_nd": ".",
@@ -464,6 +466,7 @@
       "change_button_label": "Zmiana",
       "accept_button_label": "Zaakceptuj konsulatcję",
       "join_button_label": "Dołącz",
+      "join_button_label_tooltip": "Możesz dołączyć do konsultacji 5 minut przed rozpoczęciem",
       "schedule_button_label": "Kalendarz",
       "live_label": "Teraz",
       "no_consultations": "Obecnie nie masz nadchodzących konsultacji",
