--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -263,7 +263,8 @@
       "conducted": "Consultație încheiată",
       "not_conducted": "Nu a avut loc",
       "free": "Gratuit",
-      "coupon": "Cupon"
+      "coupon": "Cupon",
+      "join_button_label_tooltip": "Puteți intra la consultație cu 5 minute înainte de începere"
     },
     "login": {
       "email_label": "Email / Token de acces",
@@ -438,6 +439,7 @@
       "live_text": "Acum",
       "accept_button_label": "Acceptați consultația",
       "join_button_label": "Intrare",
+      "join_button_label_tooltip": "Puteți intra la consultație cu 5 minute înainte de începere",
       "change_button_label": "Modificare",
       "ordinal_st": "st",
       "ordinal_nd": "nd",
@@ -483,6 +485,7 @@
       "change_button_label": "Modificare",
       "accept_button_label": "Acceptați consultația",
       "join_button_label": "Intrare",
+      "join_button_label_tooltip": "Puteți intra la consultație cu 5 minute înainte de începere",
       "schedule_button_label": "Program",
       "live_label": "Acum",
       "no_consultations": "În prezent nu aveți consultații programate",
