--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -252,7 +252,8 @@
       "conducted": "Консультацію завершено",
       "not_conducted": "Не відбулася",
       "free": "Безкоштовно",
-      "coupon": "Купон"
+      "coupon": "Купон",
+      "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку"
     },
     "login": {
       "email_label": "Електронна пошта / Код доступу",
@@ -421,6 +422,7 @@
       "live_text": "Зараз",
       "accept_button_label": "Погодитись на консультацію",
       "join_button_label": "Приєднатись",
+      "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку",
       "change_button_label": "Змінити",
       "ordinal_st": "-ий",
       "ordinal_nd": "-ий",
@@ -466,6 +468,7 @@
       "change_button_label": "Зміна",
       "accept_button_label": "Погодься на консультацію",
       "join_button_label": "Приєднайся",
+      "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку",
       "schedule_button_label": "Розклад",
       "live_label": "Зараз",
       "no_consultations": "Наразі немає майбутніх консультацій",
