Add: automatically apply coupon for Poland

--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -944,7 +944,8 @@
       "coupon_paragraph": "Наші партнери спонсорують купони, які забезпечують безкоштовні сесії.",
       "coupon_paragraph_two": "Будь ласка, скопіюйте код, який Ви отримали, і вставте його нижче. Після надсилання коду купона Ви побачите всіх консультантів, які його обслуговують, та їхню доступність.",
       "max_price": "Максимальна ціна",
-      "providers_free_consultation_label": "Тільки безкоштовна консультація"
+      "providers_free_consultation_label": "Тільки безкоштовна консультація",
+      "coupon_note": "Цього разу ми ввели за тебе код на безкоштовну сесію! Запишись на зустріч з одним із наших консультантів і зроби перший крок, щоб подбати про своє самопочуття."
     },
     "register-about-you-page": {
       "heading_1": "Розкажи нам більше про себе",
