--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1397,6 +1397,14 @@
       "confirm": "Tak, usuń wszystkie moje dane dziennika nastroju",
       "cancel": "Nie, zachowaj moje dane dziennika nastroju",
       "success": "Twoje dane dziennika nastroju zostały pomyślnie usunięte."
+    },
+    "how-it-works-mood-track": {
+      "heading": "Jak działa rejestrator nastroju",
+      "subheading_1": "Możesz łatwo zapisywać swoje nastroje w ciągu dnia lub w dowolnych, wybranych przez siebie odstępach czasu. Każdy wpis pomaga stworzyć osobistą historię nastroju, co pozwala śledzić zmiany i wzorce w czasie. To szybkie, prywatne i dopasowane do Twojej codziennej rutyny.",
+      "subheading_2": "Podczas zapisywania nastroju możesz opcjonalnie oznaczyć go jako szczególne lub ważne wydarzenie życiowe. Możesz też dodać komentarze, aby uchwycić myśli lub szczegóły związane z daną chwilą. To pomaga nadać więcej kontekstu historii Twojego nastroju.",
+      "subheading_3": "Wykres pokaże Twoje zarejestrowane nastroje według daty i godziny, pomagając wizualizować Twoje emocjonalne trendy. Poniżej znajdziesz polecane treści dopasowane do Twojego ostatniego wpisu nastroju – dla wsparcia i lepszego zrozumienia.",
+      "subheading_4": "Klikając konkretne wydarzenie, możesz zobaczyć wszystkie komentarze i notatki zarejestrowane w tym momencie, aby lepiej zrozumieć, co wpłynęło na Twój nastrój.",
+      "subheading_5": "Możesz wygenerować raport dla dowolnego zakresu dat i wyeksportować go jako plik CSV, aby łatwo przeglądać lub udostępniać dane o nastroju, gdy zajdzie taka potrzeba."
     }
   },
   "routes": {
