--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -1470,6 +1470,14 @@
       "consent": "To proceed, please consent to our <0>Privacy Policy</0>",
       "cta_label": "I agree to complete the questionnaire.",
       "secondary_cta_label": "I do not want to complete the questionnaire"
+    },
+    "how-it-works-mood-track": {
+      "heading": "Cum funcționează monitorizarea stării de spirit",
+      "subheading_1": "Poți înregistra cu ușurință stările tale de spirit pe parcursul zilei sau la intervale personalizate care ți se potrivesc. Fiecare înregistrare contribuie la construirea unui istoric personal al stărilor de spirit, permițându-ți să observi schimbările și tiparele în timp. Este rapid, privat și gândit să se integreze natural în rutina ta zilnică.",
+      "subheading_2": "Când înregistrezi o stare de spirit, poți marca opțional momentul ca un eveniment special sau important din viață. De asemenea, poți adăuga comentarii pentru a nota gânduri sau detalii legate de acel moment. Acest lucru oferă mai mult context istoricului tău emoțional.",
+      "subheading_3": "Un grafic va afișa stările tale de spirit înregistrate în funcție de dată și oră, ajutându-te să vizualizezi tendințele emoționale. Mai jos vei găsi conținut recomandat, adaptat celei mai recente înregistrări a stării tale de spirit, pentru sprijin și înțelegere.",
+      "subheading_4": "Făcând clic pe un anumit eveniment, poți vedea toate comentariile și notițele înregistrate pentru acel moment, oferindu-ți o înțelegere mai profundă a factorilor care ți-au influențat starea de spirit.",
+      "subheading_5": "Poți genera un raport pentru orice interval de date selectat și îl poți exporta ca fișier CSV, ceea ce îți permite să îți revizuiești sau să împarți datele despre stările tale de spirit atunci când este necesar."
     }
   },
   "routes": {
