--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1420,6 +1420,14 @@
       "consent": "Чтобы продолжить, пожалуйста, согласитесь с нашей <0>Политикой конфиденциальности</0>",
       "cta_label": "Я согласен(а) пройти опрос.",
       "secondary_cta_label": "Я не хочу проходить опрос"
+    },
+    "how-it-works-mood-track": {
+      "heading": "Как работает трекер настроения",
+      "subheading_1": "Вы можете легко записывать свое настроение в течение дня или в любое удобное для вас время. Каждая запись помогает сформировать личную историю настроения, что позволяет отслеживать изменения и закономерности со временем. Это быстро, конфиденциально и удобно вписывается в вашу повседневную жизнь.",
+      "subheading_2": "При записи настроения вы можете отметить его как особое или важное жизненное событие. Также можно добавить комментарии, чтобы зафиксировать мысли или детали, связанные с этим моментом. Это помогает придать больше контекста вашей истории настроения.",
+      "subheading_3": "Диаграмма покажет ваши записанные настроения по дате и времени, помогая визуализировать эмоциональные тенденции. Ниже вы найдете рекомендованный контент, подобранный в соответствии с вашим последним настроением — для поддержки и осознания.",
+      "subheading_4": "Нажав на конкретное событие, вы можете просмотреть все комментарии и заметки, сделанные в этот момент, чтобы глубже понять, что повлияло на ваше настроение.",
+      "subheading_5": "Вы можете создать отчет за любой выбранный период и экспортировать его в формате CSV, чтобы легко просматривать или делиться своими данными о настроении при необходимости."
     }
   },
   "routes": {
