--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -1436,6 +1436,14 @@
       "confirm": "Так, видалити всі мої дані трекера настрою",
       "cancel": "Ні, залишити мої дані трекера настрою",
       "success": "Ваші дані трекера настрою було успішно видалено."
+    },
+    "how-it-works-mood-track": {
+      "heading": "Як працює трекер настрою",
+      "subheading_1": "Ви можете легко записувати свій настрій протягом дня або у зручні для вас періоди часу. Кожен запис допомагає створити особисту історію настрою, що дозволяє відстежувати зміни та закономірності з часом. Це швидко, конфіденційно та природно вписується у ваш щоденний ритм життя.",
+      "subheading_2": "Під час запису настрою ви можете позначити його як особливу або важливу життєву подію. Також можна додати коментарі, щоб зафіксувати думки чи деталі, пов’язані з цим моментом. Це допомагає краще зрозуміти контекст вашої історії настрою.",
+      "subheading_3": "Діаграма показуватиме ваші записані настрої за датою та часом, допомагаючи візуалізувати емоційні тенденції. Нижче ви знайдете рекомендований контент, адаптований до вашого останнього запису настрою — для підтримки та кращого розуміння.",
+      "subheading_4": "Натиснувши на конкретну подію, ви можете переглянути всі коментарі та нотатки, зроблені в цей момент, щоб глибше зрозуміти, що вплинуло на ваш настрій.",
+      "subheading_5": "Ви можете створити звіт за будь-який обраний період і експортувати його у форматі CSV, щоб легко переглядати або ділитися своїми даними про настрій за потреби."
     }
   },
   "routes": {
