--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -949,7 +949,9 @@
     },
     "mood-tracker-page": {
       "heading": "Տրամադրության ստուգիչ",
-      "subheading": "Այստեղ կարող եք ծանոթանալ ձեր տրամադրության ստուգիչին և առաջընթացին"
+      "subheading": "Այստեղ կարող եք ծանոթանալ ձեր տրամադրության ստուգիչին և առաջընթացին",
+      "export_report": "Արտահանել հաշվետվությունը",
+      "how_it_works": "Ինչպես է գործում"
     },
     "dashboard-page": {
       "accept_success": "Խորհրդատվությունը հաջողությամբ ընդունված է։"
