--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -1046,7 +1046,9 @@
     },
     "mood-tracker-page": {
       "heading": "Көңіл-күй трекері",
-      "subheading": "Мұнда Сіз көңіл-күйіңізді және жетістіктеріңізді тексере аласыз"
+      "subheading": "Мұнда Сіз көңіл-күйіңізді және жетістіктеріңізді тексере аласыз",
+      "export_report": "Ақпаратты экспорттау",
+      "how_it_works": "Қалай жұмыс істейді"
     },
     "dashboard-page": {
       "accept_success": "Консультация сәтті қабылданды"
