--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1047,7 +1047,9 @@
     },
     "mood-tracker-page": {
       "heading": "Трекер настроения",
-      "subheading": "Здесь Вы можете проверить свое настроение и прогресс"
+      "subheading": "Здесь Вы можете проверить свое настроение и прогресс",
+      "export_report": "Экспорт отчета",
+      "how_it_works": "Как это работает"
     },
     "dashboard-page": {
       "accept_success": "Консультация успешно принята"
