--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -308,7 +308,8 @@
       "text_2": "uSupport — це платформа з підтримки ментального здоров’я та консультування молодих людей, їхніх батьків/опікунів, де конфіденційність і безпека є пріоритетом.",
       "heading_3": "Про тебе",
       "text_3": "Будь найкращою версією себе! Твоє ментальне здоров'я має значення.",
-      "login": "Увійди за допомогою електронної пошти/коду доступу"
+      "login": "Увійди за допомогою електронної пошти/коду доступу",
+      "pl_text": "uSupport — це платформа психічного здоров’я та добробуту, призначена для молодих людей (16–24)"
     },
     "register-email": {
       "email_error": "Введи дійсну адресу електронної пошти",
