Add: missing translation to the consultation-page

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -986,7 +986,8 @@
       "consultation_end_reminder": "Ձեր խորհրդատվությունը կավարտվի {{minutes}} րոպեից",
       "textarea_placeholder": "Այստեղ մուտքագրեք ձեր հաղորդագրությունը․․․",
       "allow_permissions": "Տեսախցիկի և/կամ միկրոֆոնի օգտագործման թույլտվությունները մերժված են։ Եթե ցանկանում եք կապ հաստատել ծառայություն մատուցողի հետ, խնդրում ենք թույլատրել դրանց օգտագործումը՝ ակտիվացնելով համապատասխան կարգավորումները ձեր բրաուզերում կամ սեղմելով հասցեի տողի մոտ գտնվող տեղեկատվական նշանին։",
-      "permissions_error": "You have denied the permissions"
+      "permissions_error": "You have denied the permissions",
+      "typing": "Տպում է..."
     },
     "payment-history-page": {
       "heading": "Վճարման պատմությունը",
