--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -1092,7 +1092,8 @@
       "consultation_end_reminder": "Консультація закінчиться за {{minutes}} хвилин",
       "textarea_placeholder": "Введи своє повідомлення тут...",
       "allow_permissions": "Дозволи на доступ до камери та/або мікрофона були відхилені. Якщо ти хочеш поговорити з фахівцем/фахівчинею, увімкни дозволи в налаштуваннях браузера або через значок інформації в адресному рядку",
-      "permissions_error": "Ти відхилив/ла дозволи"
+      "permissions_error": "Ти відхилив/ла дозволи",
+      "typing": "Друкує..."
     },
     "payment-history-page": {
       "heading": "Історія платежів",
