--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1134,7 +1134,8 @@
       "textarea_placeholder": "Type your message here...",
 
       "permissions_error": "You have denied the permissions",
-      "allow_permissions": "The camera and/or microphone permissions have been denied. If you want to talk to the provider, please allow the permissions in your browser settings or from the information icon in the address bar."
+      "allow_permissions": "The camera and/or microphone permissions have been denied. If you want to talk to the provider, please allow the permissions in your browser settings or from the information icon in the address bar.",
+      "typing": "Typing..."
     },
     "payment-history-page": {
       "heading": "Payment history",
