--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -1086,7 +1086,8 @@
       "consultation_end_reminder": "Ваша консультация закончится через {{minutes}} минут",
       "textarea_placeholder": "Хабарламаңызды осы жерге енгізіңіз...",
       "permissions_error": "Сіз рұқсаттарды қабылдамадыңыз",
-      "allow_permissions": "Камера және/немесе микрофонға рұқсаттар қабылданбады. Егер сіз провайдермен сөйлескіңіз келсе, шолғыштың параметрлерінде немесе мекенжай жолындағы ақпарат белгішесінде рұқсаттарды қосыңыз."
+      "allow_permissions": "Камера және/немесе микрофонға рұқсаттар қабылданбады. Егер сіз провайдермен сөйлескіңіз келсе, шолғыштың параметрлерінде немесе мекенжай жолындағы ақпарат белгішесінде рұқсаттарды қосыңыз.",
+      "typing": "Жазып жатыр..."
     },
     "payment-history-page": {
       "heading": "Төлем тарихы",
