--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1087,7 +1087,8 @@
       "consultation_end_reminder": "Ваша консультация завершится через {{minutes}} минут",
       "textarea_placeholder": "Введите Ваше сообщение здесь...",
       "permissions_error": "Вы отклонили разрешения",
-      "allow_permissions": "Разрешения на доступ к камере и/или микрофону были отклонены. Если вы хотите поговорить с провайдером, включите разрешения в настройках вашего браузера или через значок информации в адресной строке."
+      "allow_permissions": "Разрешения на доступ к камере и/или микрофону были отклонены. Если вы хотите поговорить с провайдером, включите разрешения в настройках вашего браузера или через значок информации в адресной строке.",
+      "typing": "Печатает..."
     },
     "payment-history-page": {
       "heading": "История платежей",
